--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -17,7 +17,7 @@
 \basicInfo{
   \email{yabping@gmail.com} \textperiodcentered\ 
   \phone{(+86) 159-6818-3014} \textperiodcentered\ 
-  \linkedin[Yabin Ping]{https://www.linkedin.com/in/ping-yabin-a3225068?trk=nav_responsive_tab_profile}}
+  \linkedin[Yabin Ping]{https://www.linkedin.com/in/ping-yabin-a3225068}}
  
 \section{\faGraduationCap\  教育背景}
 \datedsubsection{\textbf{上海交通大学}, 上海, 上海}{2012.9 -- 2015.4}
