finish first version

--- a/resume.tex
+++ b/resume.tex
@@ -7,45 +7,52 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Yabin Ping}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{yabping@gmail.com} \textperiodcentered\ 
+  \phone{(+86) 159-6818-3014} \textperiodcentered\ 
+  \linkedin[Yabin Ping]{https://cn.linkedin.com/in/ping-yabin-a3225068}}
 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+\datedsubsection{\textbf{Shanghai Jiao Tong University}, Shanghai, China}{Sept. 2012 -- Apr. 2015}
+\textit{Master student} Computer Science(CS).
+\datedsubsection{\textbf{Hunan Agriculture University}, Hunan, China}{Sept. 2007 -- Jun. 2011}
+\textit{B.S.} in Computer Science(CS).
+
+
+\section{\faCogs\ Skill Set}
+\begin{itemize}[parsep=0.5ex]
+	\item Programming Languages: Python，Golang， C/C++.
+	\item Skills: Data structure \& algorithms, Thrift RPC, RabbitMQ, Celery, Redis, MySQL, Postgresql, Zookeeper
+	\item Classes: Operating System, Data Structure, Networking, Database Principle
+\end{itemize}
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
+\datedsubsection{\textbf{Rajax Network Technology} Shanghai, China}{May. 2015 -- Present}
+\role{Distribution Platform}{Technical Leader}
+In order to improve the quality of take-out service,  a related problem is how to improve the transportation of foods to customers efficiently. So we design this system, and my contributions are:
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Analysis of business architecture, design application architecture and technical architecture; 
+  \item Implemented the core module of the system, including but not limited to order service，courier service, micro-service management etc.
+  \item Optimize some API to achieve  better efficiency in time or storage.
+  \item Design schedule algorithm and LBS algorithms to improve last mile problems. 
 \end{itemize}
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
-\role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
-Brief introduction: xxx
+\datedsubsection{\textbf{Microsoft} Shanghai, China}{Apr. 2014 -- Jul. 2014}
+\role{Azure web portal}{SDE}
+Developed a web portal based on .Net framework. The technical parts are:
 \begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
+  \item Use signalR technology to enable real-time push functions from server to browser.
+  \item Furthermore I analyzed the web portal’s security issues, like XSS, CSRF, SQL injection attacks.
 \end{itemize}
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{May. 2015 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
+\datedsubsection{\textbf{Intel}}{Jul. 2013 -- Mar. 2014}
+\role{DPDK VirtIO}{SDE}
 \begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
+  \item Investigated the communcation ways between host machine and virtual machine. 
+  \item Developed an automation test framework using Python. 
+  \item As my first job, I also had learnt much about how to work together in a business company, and how to develop a product.
 \end{itemize}
 
 % Reference Test
@@ -55,22 +62,14 @@ An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 %  \item main contribution
 %\end{itemize}
 
-\section{\faCogs\ Skills}
-\begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C == Python > C++ > Java
-  \item Platform: Linux
-  \item Development: Web, xxx
-\end{itemize}
 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
-\datedline{Other awards}{2015}
+\datedline{Scholarship, Award on Shanghai Jiao Tong University}{ Sept. 2013}
+\datedline{IEEE Globecom best paper candidate}{Dec. 2014}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://your.blog.me
-  \item GitHub: https://github.com/username
-  \item Languages: English - Fluent, Mandarin - Native speaker
+  \item GitHub: https://github.com/yabping
 \end{itemize}
 
 %% Reference
