--- a/resume.tex
+++ b/resume.tex
@@ -23,8 +23,8 @@
 
 \section{\faCogs\ Skill Set}
 \begin{itemize}[parsep=0.5ex]
-	\item Programming Languages: Python，Golang， C/C++.
-	\item Skills: Data structure \& algorithms, Thrift RPC, RabbitMQ, Celery, Redis, MySQL, Postgresql, Zookeeper
+	\item Programming Languages: Python, Golang, C/C++.
+	\item Skills: Data structure \& algorithms, Machine Learning, Thrift RPC, RabbitMQ, Celery, Redis, MySQL, Postgresql, Zookeeper
 	\item Classes: Operating System, Data Structure, Networking, Database Principle
 \end{itemize}
 
@@ -36,7 +36,7 @@ In order to improve the quality of take-out service,  a related problem is how t
   \item Analysis of business architecture, design application architecture and technical architecture; 
   \item Implemented the core module of the system, including but not limited to order service，courier service, micro-service management etc.
   \item Optimize some API to achieve  better efficiency in time or storage.
-  \item Design schedule algorithm and LBS algorithms to improve last mile problems. 
+  \item Design schedule algorithm and LBS algorithms to improve last mile problems, such as GA(Genetic Algorithm), HC(Hierarchical Clustering).
 \end{itemize}
 
 \datedsubsection{\textbf{Microsoft} Shanghai, China}{Apr. 2014 -- Jul. 2014}
