--- a/resume.tex
+++ b/resume.tex
@@ -24,19 +24,21 @@
 \section{\faCogs\ Skill Set}
 \begin{itemize}[parsep=0.5ex]
 	\item Programming Languages: Python, Golang, C/C++.
-	\item Skills: Data structure \& algorithms, Machine Learning, Thrift RPC, RabbitMQ, Celery, Redis, MySQL, Postgresql, Zookeeper
+	\item Skills: Data structure \& Algorithms, Machine Learning, Thrift RPC, RabbitMQ, Redis, MySQL,Zookeeper
 	\item Classes: Operating System, Data Structure, Networking, Database Principle
 \end{itemize}
 
 \section{\faUsers\ Experience}
 \datedsubsection{\textbf{Rajax Network Technology} Shanghai, China}{May. 2015 -- Present}
-\role{Distribution Platform}{Technical Leader}
-In order to improve the quality of take-out service,  a related problem is how to improve the transportation of foods to customers efficiently. So we design this system, and my contributions are:
+\role{}{Technical Leader}
+In order to improve the quality of take-out service,  a related problem is how to improve the transportation of foods to customers efficiently. So we design the platform, and my contributions are:
 \begin{itemize}
-  \item Analysis of business architecture, design application architecture and technical architecture; 
-  \item Implemented the core module of the system, including but not limited to order service，courier service, micro-service management etc.
-  \item Optimize some API to achieve  better efficiency in time or storage.
-  \item Design schedule algorithm and LBS algorithms to improve last mile problems, such as GA(Genetic Algorithm), HC(Hierarchical Clustering).
+  \item Design core, backend software components(Order, Account services etc.) based on SOA architecture.
+  \item Design scheduling and LBS algorithms to improve last mile problem,  mainly about GA(Genetic Algorithm), HC(Hierarchical Clustering).
+  \item Analyze and improve efficiency, scalability, and stability of above systems to achieve better performance both on time and storage.
+  \item Training machine learning models to predict order's cooking time, courier's walking time, mainly on LR and GBDT.
+  \item Interface with other teams to incorporate their innovations.
+  
 \end{itemize}
 
 \datedsubsection{\textbf{Microsoft} Shanghai, China}{Apr. 2014 -- Jul. 2014}
