--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@
 \section{\faCogs\ Skill Set}
 \begin{itemize}[parsep=0.5ex]
 	\item Programming Languages: Python, Golang, C/C++.
-	\item Skills: Data structure \& Algorithms, Machine Learning, Thrift RPC, RabbitMQ, Redis, MySQL,Zookeeper
+	\item Skills: Linux, Data structure \& Algorithms, Machine Learning, Thrift RPC, RabbitMQ, Redis, MySQL,Zookeeper
 	\item Classes: Operating System, Data Structure, Networking, Database Principle
 \end{itemize}
 
@@ -52,7 +52,7 @@ Developed a web portal based on .Net framework. The technical parts are:
 \datedsubsection{\textbf{Intel}}{Jul. 2013 -- Mar. 2014}
 \role{DPDK VirtIO}{SDE}
 \begin{itemize}
-  \item Investigated the communcation ways between host machine and virtual machine. 
+  \item Investigated the communication ways between host machine and virtual machine. 
   \item Developed an automation test framework using Python. 
   \item As my first job, I also had learnt much about how to work together in a business company, and how to develop a product.
 \end{itemize}
